--- a/index.html
+++ b/index.html
@@ -17,44 +17,39 @@
 
     <main class="content">
         <div class="forms">
-            <div class="contact">
-                <h2 class="contact__title">Contact infomation</h2>
-                <div class="form">
-                    <div class="information">
-                        <h3 class="information__description">E-mail</h3>
-                        <input type="text" class="icon" value placeholder="Enter your email...">
-                    </div>
-                    <div class="information">
-                        <h3 class="information__description">Phone</h3>
-                        <input type="text" class="icon  icon__phone" value placeholder="Enter your phone...">
-                    </div>
+            <div class="form">
+                <h2 class="form__title">Contact infomation</h2>
+                <div class="box">
+                    <h3 class="box__title">E-mail</h3>
+                    <input type="text" class="icons" value placeholder="Enter your email...">
+                </div>
+                <div class="box">
+                    <h3 class="box__title">Phone</h3>
+                    <input type="text" class="icons icon__phone" value placeholder="Enter your phone...">
                 </div>
             </div>
-
-            <div class="contact">
-                <h2 class="contact__title">Shipping address</h2>
-                <div class="form">
-                    <div class="information">
-                        <h3 class="information__description">Full name</h3>
-                        <input type="text" class="icon icon__user" value placeholder="Rodney Cotton">
+            <div class="form">
+                <h2 class="form__title">Shipping address</h2>
+                <div class="box">
+                    <h3 class="box__title">Full name</h3>
+                    <input type="text" class="icons icon__user" value placeholder="Rodney Cotton">
+                </div>
+                <div class="box">
+                    <h3 class="box__title">Address</h3>
+                    <input type="text" class="icons icon__home" value placeholder="Your address...">
+                </div>
+                <div class="box">
+                    <h3 class="box__title">City</h3>
+                    <input type="text" class="icons icon__city" value placeholder="Your city...">
+                </div>
+                <div class="boxes">
+                    <div class="box box__half">
+                        <h3 class="box__title">Country</h3>
+                        <input type="text" class="icons icon__globe" value placeholder="Your country...">
                     </div>
-                    <div class="information">
-                        <h3 class="information__description">Address</h3>
-                        <input type="text" class="icon  icon__home" value placeholder="Your address..">
-                    </div>
-                    <div class="information">
-                        <h3 class="information__description">City</h3>
-                        <input type="text" class="icon icon__city" value placeholder="Your city..">
-                    </div>
-                    <div class="info">
-                        <div class="information">
-                            <h3 class="information__description">City</h3>
-                            <input type="text" class="icon icon__info icon__city" value placeholder="Your city..">
-                        </div>
-                        <div class="information">
-                            <h3 class="information__description">City</h3>
-                            <input type="text" class="icon icon__info icon__city" value placeholder="Your city..">
-                        </div>
+                    <div class="box box__half">
+                        <h3 class="box__title">Postal code</h3>
+                        <input type="text" class="icons icon__postal" value placeholder="Your postal code...">
                     </div>
                 </div>
             </div>
