--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                     </div>
                 </div>
             </div>
+            <div class="checkbox">
+                <input type="checkbox" class="checkbox__button">
+                <p class="checkbox__info">Save this information for next time</p>
+            </div>
+            <div class="submit">
+                <input type="submit" name="submit" value="Continue" class="submit__button">
+            </div>
         </div>
     </main>
 </body>
