submit proyect responsive

--- a/index.html
+++ b/index.html
@@ -61,7 +61,66 @@
                 <input type="submit" name="submit" value="Continue" class="submit__button">
             </div>
         </div>
+        <div class="products">
+            <div class="container">
+                <div class="product">
+                    <div class="item">
+                        <img src="./images/photo1.png" alt="Vintage Backbag" class="images">
+                    </div>
+                    <div class="description">
+                        <div class="details">
+                            <h3 class="description__title">Vintage Backbag</h3>
+                            <div class="price">
+                                <h4 class="price__discount">$54.99</h4>
+                                <p class="price__normal">$54.99</p>
+                            </div>
+                        </div>
+
+                        <div class="counter">
+                            <button class="counter__button">+</button>
+                            <h5 class="counter__number">1</h5>
+                            <button class="counter__button">-</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product">
+                    <div class="item">
+                        <img src="./images/photo2.png" alt="Vintage Backbag" class="images">
+                    </div>
+                    <div class="description">
+                        <div class="details">
+                            <h3 class="description__title">Levi Shoes</h3>
+                            <div class="price">
+                                <h4 class="price__discount">$74.99</h4>
+                                <p class="price__normal">$124.99</p>
+                            </div>
+                        </div>
+
+                        <div class="counter">
+                            <button class="counter__button">+</button>
+                            <h5 class="counter__number">1</h5>
+                            <button class="counter__button">-</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="prices">
+                    <div class="total">
+                        <h4 class="total__text">Shipping</h4>
+                        <p class="total__price">$19</p>
+                    </div>
+                    <div class="total">
+                        <h4 class="total__text">Total</h4>
+                        <p class="total__price">$148.98</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <h3 class="footer__copyright">created by <span class="span-acent">RodoCT</span> - devChallenges.io</h3>
+    </footer>
 </body>
 
 </html>
